--- a/client/src/components/features/Concert/Concert.scss
+++ b/client/src/components/features/Concert/Concert.scss
@@ -52,6 +52,15 @@
       bottom: 1rem;
       left: 1.5rem;
     }
+
+    &__tickets {
+      opacity: 0.8;
+      font-size: 0.9rem;
+      position: absolute;
+      bottom: 3rem;
+      left: 1.5rem;
+      margin: 0.5rem;
+    }
   
   }
 
